kroki-k8s/bpmn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: bpmn
  name: bpmn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpmn
  template:
    metadata:
      labels:
        app: bpmn
    spec:
      containers:
      - image: yuzutech/kroki-bpmn
        name: bpmn
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
