kroki-k8s/kroki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: kroki
  name: kroki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kroki
  template:
    metadata:
      labels:
        app: kroki
    spec:
      containers:
      - env:
        - name: KROKI_BLOCKDIAG_HOST
          value: blockdiag
        - name: KROKI_BPMN_HOST
          value: bpmn
        - name: KROKI_EXCALIDRAW_HOST
          value: excalidraw
        - name: KROKI_MERMAID_HOST
          value: mermaid
        image: yuzutech/kroki
        name: kroki
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
      restartPolicy: Always
