kroki-k8s/mermaid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: mermaid
  name: mermaid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mermaid
  template:
    metadata:
      labels:
        app: mermaid
    spec:
      containers:
      - image: yuzutech/kroki-mermaid
        name: mermaid
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
