kroki-k8s/blockdiag-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: blockdiag
  name: blockdiag
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: blockdiag
