kroki-k8s/excalidraw-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: excalidraw
  name: excalidraw
spec:
  ports:
  - name: "8003"
    port: 8003
    targetPort: 8003
  selector:
    app: excalidraw
