kroki-k8s/kroki-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: kroki
  name: kroki
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: kroki
